--- a/.env
+++ b/.env
@@ -1,1 +1,6 @@
 TELEGRAM_BOT_TOKEN=8293060979:AAFJ4vK93ctszVyrBZfgVQkv4NyOCxHykVE
+EMAIL_HOST=smtp.gmail.com
+EMAIL_PORT=587
+EMAIL_USER=your_email@gmail.com
+EMAIL_PASSWORD=your_app_password
+ADMIN_EMAIL=your_admin
